# nod

./: .gitignore  CMakeLists.txt  Cargo.toml  Justfile  README.md  deny.toml
.github/workflows/: build.yaml  python.yaml
cmake/: NodCompressionDeps.cmake  nodConfig.cmake.in
nod/: Cargo.toml  nod.pyi  nod_rs.pyi  pyproject.toml
nod-ffi/: Cargo.toml  cbindgen.toml
nod-ffi/examples/: CMakeLists.txt
nod-ffi/examples/sdl3-stream-demo/: CMakeLists.txt  README.md  main.c
nod-ffi/src/: error.rs  handle.rs  lib.rs  stream.rs  types.rs
nod/python_tests/: conftest.py  test_disc.py  test_partition.py  test_patcher.py  test_writer.py
nod/src/: common.rs  lib.rs  python.rs  read.rs  write.rs
nod/src/disc/: direct.rs  fst.rs  gcn.rs  hashes.rs  mod.rs  preloader.rs  reader.rs  wii.rs  writer.rs
nod/src/io/: block.rs  ciso.rs  gcz.rs  iso.rs  mapped.rs  mod.rs  nfs.rs  nkit.rs  split.rs  tgc.rs  wbfs.rs  wia.rs
nod/src/util/: aes.rs  compress.rs  digest.rs  lfg.rs  mod.rs  read.rs
nodtool/: Cargo.toml  build.rs
nodtool/src/: argp_version.rs  lib.rs  main.rs
nodtool/src/cmd/: convert.rs  dat.rs  extract.rs  gen.rs  info.rs  mod.rs  verify.rs
nodtool/src/util/: digest.rs  mod.rs  redump.rs  shared.rs
