[workspace]
members = ["nod", "nodtool"]
resolver = "3"

[profile.release]
debug = 1

[profile.release-lto]
inherits = "release"
lto = "fat"
strip = "debuginfo"
codegen-units = 1

[workspace.package]
version = "2.0.0-alpha.4"
edition = "2024"
rust-version = "1.85"
authors = ["Luke Street <luke@street.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/encounter/nod"
keywords = ["gamecube", "wii", "iso", "wbfs", "rvz"]

[workspace.dependencies]
digest = { version = "0.11.0-rc.3", default-features = false }
md-5 = { version = "0.11.0-rc.2", default-features = false }
sha1 = { version = "0.11.0-rc.2", default-features = false }
tracing = "0.1"
zerocopy = { version = "0.8", features = ["alloc", "derive"] }
