[package]
name = "nodtool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/nodtool"
readme = "../README.md"
description = """
CLI tool for extracting and converting GameCube and Wii disc images.
"""
keywords.workspace = true
categories = ["command-line-utilities", "parser-implementations"]
build = "build.rs"

[features]
default = ["compress-bzip2", "compress-lzma", "compress-zlib", "compress-zstd"]
compress-bzip2 = ["nod/compress-bzip2"]
compress-lzma = ["nod/compress-lzma"]
compress-zlib = ["nod/compress-zlib"]
compress-zstd = ["nod/compress-zstd"]
openssl = ["nod/openssl"]
openssl-vendored = ["nod/openssl-vendored"]
tracy = ["dep:tracing-tracy"]

[dependencies]
argp = "0.4"
crc32fast = "1.5"
digest = { workspace = true }
enable-ansi-support = "0.3"
hex = { version = "0.4", features = ["serde"] }
indicatif = "0.18"
md-5 = { workspace = true }
nod = { version = "2.0.0-alpha", path = "../nod", default-features = false }
num_cpus = "1.17"
quick-xml = { version = "0.38", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
sha1 = { workspace = true }
size = "0.5"
supports-color = "3.0"
tracing = { workspace = true }
tracing-attributes = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tracy = { version = "0.11", features = ["flush-on-exit"], optional = true }
zerocopy = { workspace = true }
zstd = "0.13"

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1"

[build-dependencies]
hex = { version = "0.4", features = ["serde"] }
quick-xml = { version = "0.38", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
zerocopy = { version = "0.8", features = ["alloc", "derive"] }
zstd = "0.13"
